fix spacing on main containers

--- a/less/oya-views.less
+++ b/less/oya-views.less
@@ -50,9 +50,9 @@ section#block-views-oya-header-image-block {
 }
 
 /* OYA - Menu Back Reset Link */
-
 .view-oya-menu-back-reset-link {
-	padding: 20px;
+	padding: 0px 20px;
+	margin-bottom: 20px;
 	& a {
 		color: @oya-gray7-color;
 		text-transform: uppercase;
