--- a/less/style.less
+++ b/less/style.less
@@ -320,6 +320,10 @@ header.navbar-default {
 /*** ASIDE & MAIN CONTENT CONTAINER ***/
 .aside-main-container {
 	background: @oya-white2-color;
+	padding: 20px 0px;
+}
+body.node-type-lp1 .aside-main-container {
+	padding: 30px 0px;
 }
 
 /*** FOOTER ***/
